tests/ui/repeat.stderr
error: E::Aaa should sort before E::Bbb
  --> $DIR/tests/ui/repeat.rs:12:9
   |
12 |         E::Aaa(_) => {}
   |         ^^^^^^
